base/it-tools/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: it-tools
  namespace: apps
  labels:
    app: it-tools
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: it-tools
  template:
    metadata:
      labels:
        app: it-tools
        tier: frontend
    spec:
      containers:
        - name: it-tools
          image: ghcr.io/corentinth/it-tools:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 150m
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 30
