base/it-tools/service.yml
apiVersion: v1
kind: Service
metadata:
  name: it-tools
  namespace: apps
spec:
  selector:
    app: it-tools
  ports:
    - port: 80
      targetPort: 80
